syntax = "proto3";

option go_package = "./pb";

package gserver;

enum CmdClient {
	CmdClient_None = 0; // 解决"The first enum value must be zero in proto3."的报错
	
	// Login
	Cmd_LoginReq = 1001;
	Cmd_LoginRes = 1002;
	Cmd_AccountReg = 1003;
	Cmd_AccountRes = 1004;
	Cmd_PlayerEntryGameReq = 1005;
	Cmd_PlayerEntryGameRes = 1006;
	Cmd_CreatePlayerReq = 1007;
	Cmd_CreatePlayerRes = 1008;
	Cmd_TestCmd = 1009; // 测试命令
	
	// Money
	Cmd_CoinReq = 1101; // 请求加coin的测试消息
	Cmd_CoinRes = 1102;
	
	// Quest
	Cmd_FinishQuestReq = 1201; // 完成任务
	Cmd_FinishQuestRes = 1202; // 完成任务的返回结果
	
	// Guild
	Cmd_GuildListReq      = 2001; // 公会列表查看
	Cmd_GuildListRes      = 2002;
	Cmd_GuildCreateReq    = 2003; // 创建公会
	Cmd_GuildCreateRes    = 2004;
	Cmd_GuildJoinReq      = 2005; // 请求加入某个公会
	Cmd_GuildJoinRes      = 2006;
	Cmd_GuildJoinAgreeReq = 2007; // 公会管理员处理入会请求
	Cmd_GuildJoinAgreeRes = 2008;
	Cmd_GuildDataViewReq  = 2009; // 查看本公会的数据
	Cmd_GuildDataViewRes  = 2010;
	Cmd_GuildJoinReqTip   = 2012; // 公会入户申请的提示
	Cmd_GuildJoinReqOpResult = 2013; // 自己的入会申请的操作结果

}