syntax = "proto3";

option go_package = "./pb";

package gserver;

enum CmdServer {
	CmdServer_None = 0; // 解决"The first enum value must be zero in proto3."的报错
	
	// BaseInfo
	Cmd_PlayerEntryGameOk = 1301; // 玩家进游戏服成功
	
	Cmd_RoutePlayerMessage = 3001;
	Cmd_GuildRoutePlayerMessageReq = 3003;
	
	// GlobalEntity
	Cmd_StartupReq = 4001;
	Cmd_ShutdownReq = 4002;
}